--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <!-- 請將下方的 src 替換為你的 Apps Script 網址 -->
-    <iframe src="https://script.google.com/macros/s/AKfycbz2V4-1_Gd0BtqCh02foC_GYwKbTYXG6gGTcA-yzpyLLqZ9TSnVPGINN1oPkBdpGdkB/exec?v=3.1"></iframe>
+    <iframe src="https://https://script.google.com/macros/s/AKfycbyNP3jJqRjvoqW2QbFc6udl3TvxUtM-GYLAPU9IT8eZZVnxx8iqtHTwj9rMIutXt61j/exec?v=3.1"></iframe>
 
     <script>
         if ('serviceWorker' in navigator) {
